# something_framework

./: .pre-commit-config.yaml  LICENSE  README  entry_points.txt  setup.cfg  setup.py
something/pytest_components/: pytest_plugin.py
something/pytest_components/fixtures/: target_container.py  test_target_vm.py
something/pytest_components/markers/: manual.py
something/scripting/: container.py  smth.py  smth_shell.py
something/tests/target_resources/: test_container_targets.py  test_fixture_global.py  test_fixture_replacement.py
something/utils/: ssh.py  target_container.py
