# Setuptools config for the framework packaging

[metadata]
name = something_framework

[options]
zip_safe = False
include_package_data = True
packages = find:
# Entry Points can be used to define framework tooling, and pytest plugin definitions
entry_points = file:entry_points.txt
setup_requires = setuptools_scm
# define your requirements directly in setup!
install_requires =
    attrs
    click
    ipython
    dynaconf
    pre-commit
    pytest
    requests
    wait_for

[options.package_data]
* = *.txt, *.rst

#[options.packages.find]
#exclude = something/tests  # might not want to include some directories when packaging

# You can spec your flake8 config here too!
[flake8]
ignore = E128,E811,W503,W504
max-line-length = 120  # just get a DQHD monitor already
